--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@ body {
     padding: 0px 20%;
 }
 
+.search {
+    color: #8393AF;
+}
+
 .hero {
     width: 100%;
     height: 600px;
@@ -67,13 +71,26 @@ body {
     margin-right: 6%;
 }
 
+/* .search-bar {
+    width: 100%;
+} */
+
+.fa-magnifying-glass {
+    color: #FFFFFF;
+    padding-top: 14px;
+    padding-left: 11px;
+    position: absolute;
+    height: 20px;
+    width: 50%;
+}
+
 input {
     height: 48px;
-    padding: 17px;
+    padding-left: 44px;
     border-radius: 8px;
     /* opacity: 0.4; */
     color: #FFFFFF;
-    width: 50%;
+    width: 285px;
     background-color: #3c485d;
     border: none;
     font-weight: bold;
@@ -101,8 +118,17 @@ input:active {
     cursor: pointer;
 }
 
+.fa-wallet {
+    color: #FFFFFF;
+    position: absolute;
+    width: 100%;
+    padding-left: 24px;
+    padding: 18px 24px;
+}
+
 .navbar-button {
     padding: 16px 24px;
+    padding-left: 50px;
     border-radius: 12px;
     background: linear-gradient(207.67deg, #FDAE8F 3.43%, #FD1C68 104.7%);
     border: none;
@@ -240,10 +266,24 @@ input:active {
     width: 100%;
 }
 
+.fa-solid {
+    width: 24px;
+    height: 24px;
+}
+
+.fa-rocket {
+    color: #FFFFFF;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    padding: 24px 56px;
+}
+
 .explore-button {
     padding: 21px 56px;
+    padding-left: 86px;
     height: 72px;
-    width: 20%;
+    width: 242px;
     border-radius: 16px;
     background: linear-gradient(207.67deg, #FDAE8F 3.43%, #FD1C68 104.7%);
     font-size: 20px;
