--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,12 @@ body {
     padding: 0px 20%;
 }
 
+footer{
+    width: 100%;
+    height: 492px;
+    padding: 0px 20%;
+}
+
 /* --- NAVBAR --- */
 .navbar-left, .navbar-right {
     height: 100%;
@@ -113,6 +119,72 @@ input:active {
 }
 
 /* --- HERO --- */
+.hero{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 600px;
+}
+
+.hero-left {
+    margin-bottom: 50%;
+    width: 70%;
+    height: 100%;
+    padding: 110px 0px;
+    /* background-color: #23D3A4; */
+}
+
+.hero-title,.hero-left > p, .hero-btn {
+    margin-bottom: 5%;
+}
+
+.hero-title {
+    display: flex;
+    flex-direction: column;
+    font-weight: bold;
+}
+
+.title-white {
+    color: white;
+    width: 55%;
+}
+
+.title-pink {
+    background: linear-gradient(207.67deg, #FDAE8F 3.43%, #FD1C68 104.7%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+
+.hero-left > p {
+    color: white;
+    font-size: 20px;
+}
+
+.hero-explore {
+    padding: 15px 36px;
+    border-radius: 12px;
+    background: linear-gradient(207.67deg, #FDAE8F 3.43%, #FD1C68 104.7%);
+    color: white;
+    font-weight: bold;
+    border: none;
+    margin-right: 2%;
+}
+
+.hero-create {
+    padding: 15px 36px;
+    border-radius: 12px;
+    background-color: transparent;
+    color: white;
+    font-weight: bold;
+    border: 2px solid white;
+
+}
+
+.hero-right{
+    background-image: url(./assets/hero.png);
+    width: 100%;
+    height: 90%;
+}
 
 /* --- HOW IT WORKS --- */
 .how-it-works {
@@ -251,5 +323,35 @@ input:active {
     font-weight: bold;
     border: none;
     cursor: pointer;
+}
+
+
+/* FOOTER */
+.footer-logo {
+    display: flex;
+    align-items: center;
+}
+
+.footer-left > p {
+    width: 38%;
+    color:#8393AF;
+    font-weight: 600;
+}
+
+.icon {
+    width: 100%;
+    height: 100%;
+}
+
+.img1 {
+    background-image: url(./assets/PhoneIcon.png);
+}
+
+.img2 {
+    background-image: url(./assets/EmailIcon.png);
+}
+
+.img3 {
+    background-image: url(./assets/LocationIcon.png);
 }
 
