--- a/styles.css
+++ b/styles.css
@@ -365,6 +365,59 @@ input:active {
     cursor: pointer;
 }
 
+/* --- TOP SELLERS --- */
+.top-sellers {
+    width: 100%;
+    height: 382px;
+    padding: 0px 20%;
+    margin-top: 160px;
+}
+
+.top-sellers > h1 {
+    font-size: 64px;
+    font-weight: bold;
+    margin-bottom: 56px;
+    color: #FFFFFF;
+}
+
+.row {
+    padding: 0px 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+}
+
+.column {
+    float: left;
+    width: 25%;
+    padding: 10px 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.card {
+    padding: 16px;
+    text-align: center;
+    background-color: #FFFFFF;
+    border-radius: 24px;
+    height: 104px;
+    width: 100%;
+    opacity: 20%;
+}
+
+.card-img {
+    width: 40px;
+    height: 40px;
+}
+
+.avatar {
+    background-image: url(/assets/Avatar.svg);
+    width: 72px;
+    height: 72px;
+    background-repeat: no-repeat;
+    border: none;
+
+}
 
 /* FOOTER */
 .footer-logo {
